@@ -1,14 +1,34 @@
 package com.conx.server.user.dto.crew.response;
 
 import com.conx.server.project.domain.Project;
+import com.conx.server.project.dto.response.ResultFormResponse;
 
-import java.util.Arrays;
 import java.util.List;
 
 public record ProjectSubmitConditionDTO(
-        List<String> conditions
+        List<ResultFormResponse> conditions
 ) {
-    public static ProjectSubmitConditionDTO create(Project project){
-        return new ProjectSubmitConditionDTO(Arrays.asList(project.getRequirement().split(",")));
+
+    public static ProjectSubmitConditionDTO create(
+            Project project
+    ) {
+        if (
+                project.getResultForm() == null
+                        || project.getResultForm().isEmpty()
+        ) {
+            return new ProjectSubmitConditionDTO(
+                    List.of()
+            );
+        }
+
+        List<ResultFormResponse> conditions =
+                project.getResultForm()
+                        .stream()
+                        .map(ResultFormResponse::from)
+                        .toList();
+
+        return new ProjectSubmitConditionDTO(
+                conditions
+        );
     }
 }
